@@ -1,0 +1,141 @@
+#Translated by Andreas Tarandi <torandi@gmail.com>
+#
+#Changelog:
+#2007-09-13 - Initial Translation
+
+#common strings
+pp_translate_string "Back" "Tillbaka"
+pp_translate_string "PRESS ANY KEY TO START" "TRYCK PÅ VALFRIKNAPP FÖR ATT BÖRJA"
+
+#game_type_select
+pp_translate_string "Enter an event" "Turnering"
+pp_translate_string "Practice" "Träning"
+pp_translate_string "Configuration" "Inställningar"
+pp_translate_string "Credits" "Tack till"
+pp_translate_string "Quit" "Avsluta"
+
+#configuration
+pp_translate_string "Graphics" "Grafik"
+pp_translate_string "Video" "Video"
+pp_translate_string "Audio" "Ljud"
+pp_translate_string "Keyboard" "Tangentbord"
+pp_translate_string "Joystick" "Joystick"
+
+#config mode
+pp_translate_string "Cancel" "Avbryt"
+pp_translate_string "Ok" "OK"
+
+#graphics configuration
+pp_translate_string "Graphics Configuration" "Grafikinställningar"
+pp_translate_string "Language:" "Språk:"
+pp_translate_string "Show UI Snow:" "Visa UI snö:"
+pp_translate_string "Display FPS:" "Visa FPS:"
+pp_translate_string "Display Progress Bar:" "Visa Progress Bar:"
+pp_translate_string "Draw Fog:" "Rita dimma:"
+pp_translate_string "Reflections:" "Reflektioner:"
+pp_translate_string "Shadows:" "Skuggor:"
+
+#video configuration
+pp_translate_string "Video Configuration" "Videoinställningar"
+pp_translate_string "Resolution:" "Upplösning:"
+pp_translate_string "Bits Per Pixel:" "Bitar per pixel:"
+pp_translate_string "Fullscreen:" "Fullskärm:"
+pp_translate_string "Experimental (needs restart)" "Experimentel (kräver omstart)"
+pp_translate_string "Enable FSAA:" "Aktivera FSAA:"
+
+#audio configuration
+pp_translate_string "Audio Configuration" "Ljudinställningar"
+pp_translate_string "Sound Effects:" "Ljudeffekter:"
+pp_translate_string "Music:" "Musik:"
+pp_translate_string "(needs restart)" "(kräver omstart)"
+pp_translate_string "Disable Audio:" "Stäng av ljud:"
+pp_translate_string "Stereo:" "Stereo:"
+pp_translate_string "Bits Per Sample:" "Bits Per Sample:"
+pp_translate_string "Samples Per Second:" "Samples Per Second:"
+
+#keyboard configuration
+pp_translate_string "Keyboard Configuration" "Tangentbordsinställningar"
+pp_translate_string "Turn left:" "Sväng vänster:"
+pp_translate_string "Turn right:" "Sväng höger:"
+pp_translate_string "Paddle:" "Skjut på:"
+pp_translate_string "Brake:" "Bromsa:"
+pp_translate_string "Jump:" "Hoppa:"
+pp_translate_string "Trick:" "Trick:"
+pp_translate_string "Reset:" "Återställ:"
+
+#joystick configuration
+pp_translate_string "Joystick Configuration" "Joystickinställningar"
+pp_translate_string "Enable Joystick" "Aktivera Joystick:"
+
+#race select
+pp_translate_string "Race!" "Kör!"
+pp_translate_string "Select a race" "Välj en lopp"
+pp_translate_string "Contributed by:" "Skapad av:"
+pp_translate_string "Unknown" "Okänd"
+pp_translate_string "Time:" "Tid:"
+pp_translate_string "Herring:" "Strömmingar:"
+pp_translate_string "Score:" "Poäng:"
+
+#event select
+pp_translate_string "Continue" "Fortsätt"
+pp_translate_string "Select event and cup" "Välj turnering och tävling"
+pp_translate_string "Event:" "Turnering:"
+pp_translate_string "Cup:" "Cup:"
+pp_translate_string "You've won this cup!" "Du har vunnit den här tävlingen!"
+pp_translate_string "You must complete this cup next" "Du måste vinna den här tävlingen härnäst"
+pp_translate_string "You cannot enter this cup yet" "Du kan inte delta i den här tävlingen ännu"
+
+#event race select
+pp_translate_string "You don't have any lives left." "Du har inga liv kvar."
+pp_translate_string "Race won! Your result:" "Du vann loppet! Ditt resultat:"
+pp_translate_string "Needed to advance:" "Krav för att avancera:"
+pp_translate_string "You can't enter this race yet." "Du kan inte köra det här loppet ännu."
+
+#loading
+pp_translate_string "Loading, Please Wait..." "Laddar, var vänlig vänta..."
+
+#paused
+pp_translate_string "Resume" "Fortsätt"
+pp_translate_string "Paused" "Pausad"
+
+#race over
+pp_translate_string "Race Over" "Loppet slut"
+pp_translate_string "Time: %02d:%02d.%02d" "Tid: %02d:%02d.%02d"
+pp_translate_string "Herring: %3d" "Strömmingar: %3d"
+pp_translate_string "Score: %6d" "Poäng: %6d"
+pp_translate_string "Max speed: %3d km/h" "Maxfart: %3d km/h"
+pp_translate_string "Was flying: %.01f %% of time" "Flög: %.01f %% av tiden"
+pp_translate_string "Race aborted" "Loppet avbrutet"
+pp_translate_string "You beat your best score!" "Du slog rekordet!"
+pp_translate_string "Congratulations! You won the event!" "Grattulerar! Du vann turneringen!"
+pp_translate_string "Congratulations! You won the cup!" "Grattulerar! Du vann tävlingen!"
+pp_translate_string "You advanced to the next race!" "Du avancerade till nästa lopp!"
+pp_translate_string "You didn't advance." "Du avancerade inte."
+
+#highscore
+pp_translate_string "Highscore" "Highscore"
+pp_translate_string "You made it to the %s place in the highscore!" "Du är nu %s på highscoren"
+pp_translate_string "Player name:" "Namn:"
+pp_translate_string "1:st" "1:a"
+pp_translate_string "2:nd" "2:a"
+pp_translate_string "3:rd" "3:e"
+pp_translate_string "4:th" "4:e"
+pp_translate_string "5:th" "5:e"
+pp_translate_string "6:th" "6:e"
+pp_translate_string "7:th" "7:e"
+pp_translate_string "8:th" "8:e"
+pp_translate_string "9:th" "9:e"
+pp_translate_string "10:th" "10:e"
+
+#HUD
+#Strings are prefixed to prevent collisions with the UI
+pp_translate_string "H|FPS: %.1f" "FPS: %.1f"
+pp_translate_string "H|Time:" "Tid:"
+pp_translate_string "H|km/h" "km/h"
+#herring counter
+pp_translate_string "H|%03d" "%03d"
+#time counter
+pp_translate_string "H|%02d:%02d:%02d" "%02d:%02d:%02d"
+#speed counter
+pp_translate_string "H|%.0f" "%.0f"
+
